@@ -1,0 +1,3 @@
+dist_pkgdata_DATA = \
+	status_detached.xpm \
+	status_attached.xpm
