@@ -1,0 +1,114 @@
+/* XPM */
+static char * status_detached_xpm[] = {
+"16 16 95 2",
+"  	g None",
+". 	g #0B0B0B",
+"+ 	g #131313",
+"@ 	g #363636",
+"# 	g #3E3E3E",
+"$ 	g #232323",
+"% 	g #2F2F2F",
+"& 	g #8C8C8C",
+"* 	g #CACACA",
+"= 	g #D1D1D1",
+"- 	g #AAAAAA",
+"; 	g #565656",
+"> 	g #0F0F0F",
+", 	g #2D2D2D",
+"' 	g #929292",
+") 	g #ACACAC",
+"! 	g #ABABAB",
+"~ 	g #A6A6A6",
+"{ 	g #A4A4A4",
+"] 	g #A3A3A3",
+"^ 	g #999999",
+"/ 	g #666666",
+"( 	g #0C0C0C",
+"_ 	g #0D0D0D",
+": 	g #404040",
+"< 	g #848484",
+"[ 	g #5C5C5C",
+"} 	g #545454",
+"| 	g #555555",
+"1 	g #636363",
+"2 	g #5D5D5D",
+"3 	g #202020",
+"4 	g #5E5E5E",
+"5 	g #272727",
+"6 	g #2B2B2B",
+"7 	g #262626",
+"8 	g #212121",
+"9 	g #1F1F1F",
+"0 	g #1C1C1C",
+"a 	g #1A1A1A",
+"b 	g #161616",
+"c 	g #1E1E1E",
+"d 	g #0E0E0E",
+"e 	g #676767",
+"f 	g #3A3A3A",
+"g 	g #464646",
+"h 	g #505050",
+"i 	g #686868",
+"j 	g #717171",
+"k 	g #111111",
+"l 	g #1D1D1D",
+"m 	g #282828",
+"n 	g #5F5F5F",
+"o 	g #B6B6B6",
+"p 	g #CFCFCF",
+"q 	g #BBBBBB",
+"r 	g #A0A0A0",
+"s 	g #989898",
+"t 	g #4B4B4B",
+"u 	g #414141",
+"v 	g #585858",
+"w 	g #B5B5B5",
+"x 	g #4A4A4A",
+"y 	g #303030",
+"z 	g #141414",
+"A 	g #121212",
+"B 	g #515151",
+"C 	g #595959",
+"D 	g #909090",
+"E 	g #626262",
+"F 	g #2C2C2C",
+"G 	g #171717",
+"H 	g #101010",
+"I 	g #3C3C3C",
+"J 	g #353535",
+"K 	g #3D3D3D",
+"L 	g #646464",
+"M 	g #7D7D7D",
+"N 	g #484848",
+"O 	g #343434",
+"P 	g #373737",
+"Q 	g #868686",
+"R 	g #7B7B7B",
+"S 	g #727272",
+"T 	g #525252",
+"U 	g #6C6C6C",
+"V 	g #6E6E6E",
+"W 	g #535353",
+"X 	g #393939",
+"Y 	g #383838",
+"Z 	g #2A2A2A",
+"` 	g #222222",
+" .	g #242424",
+"..	g #1B1B1B",
+"+.	g #191919",
+"          . + @ # $ .           ",
+"        % & * = = = - ; >       ",
+"    . , ' ) ! ~ { ] { ^ / (     ",
+"    _ : < [ } | | | | 1 2 _ .   ",
+"  ( 3 4 5 6 7 8 9 0 a b a c _   ",
+". d e f g h 4 i j ; k _ _ l _ . ",
+"( m n | o p q - r s 5 k _ _ _ ( ",
+"> t u v * = w [ g x y z d _ _ ( ",
+"A B # : C D ) E F $ l G H _ _ ( ",
+"z I [ J K I u e & L y G H _ _ ( ",
+"b 3 M N # K f O P Q R I > _ _ . ",
+"  $ P Q S 2 T ; U M j ; _ _ (   ",
+"  3 % J 2 V S V L W X + _ _     ",
+"    m Y % Z m ` 0 z d d _ .     ",
+"       ., Z 8 ..b + H (         ",
+"          ..+.b k d .           "};
